# open-remote-url

./: .gitignore  Cargo.toml  Changes.md  LICENSE  README.ja_EZ.md  README.ja_JP.md  README.md  README.zh_CN.md  post_build.rs
.github/workflows/: ci.yml
client/: .env.example  Cargo.toml  inactive.env  post_build.rs
client/src/: daemon.rs  installer.rs  main.rs  url_event.rs
client/tests/: url_scheme_test.rs
host/: .env.example  Cargo.toml  inactive.env
host/src/: daemon.rs  installer.rs  main.rs
receiver/: Cargo.toml
receiver/src/: daemon.rs  main.rs
scripts/: test_macos_launch.sh
scripts/client/install/: install-client.bat  install-client.command  install-client.sh  install.bat  install.command  install.sh
scripts/client/uninstall/: uninstall-client.bat  uninstall-client.command  uninstall-client.sh  uninstall.bat  uninstall.command  uninstall.sh
scripts/config/: config.bat  config.command  config.sh
scripts/host/install/: install-host.bat  install-host.command  install-host.sh
scripts/host/uninstall/: uninstall-host.bat  uninstall-host.command  uninstall-host.sh
scripts/install/: install.bat  install.command  install.sh
scripts/uninstall/: uninstall.bat  uninstall.command  uninstall.sh
sender/: Cargo.toml  inactive.env
sender/src/: daemon.rs  main.rs  url_event.rs
shared/: Cargo.toml  post_build.rs
shared/src/: cli.rs  config.rs  gui.rs  installer.rs  installer_utils.rs  lib.rs  mac_apple_events.rs  scheme_handler.rs  uninstaller.rs  utils.rs
shared/tests/: host_daemon_test.rs  port_bind_test.rs
