[package]
name = "open_remote_url"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "open-remote-url"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = [
    "json",
    "charset",
    "http2",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
listeners = "0.5"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
